// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListText /> create list Title item 1`] = `
<span
  className="fd-list__title"
>
  List item 1
</span>
`;

exports[`<ListText /> create list Title item 2`] = `
<span
  className="fd-list__title fd-list__title--no-wrap"
>
  List item 1
</span>
`;

exports[`<ListText /> create list Title item 3`] = `
<span
  className="fd-list__secondary"
>
  List item 1
</span>
`;

exports[`<ListText /> create list Title item 4`] = `
<span
  className="fd-list__secondary fd-list__secondary--no-wrap"
>
  List item 1
</span>
`;
